--- a/TTM_repuestos_v3_api-main/ttm_repuestos/pom.xml
+++ b/TTM_repuestos_v3_api-main/ttm_repuestos/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ttm_repuestos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ttm_repuestos</name>
-	<description>ttm_repuestos 3ra evaluacion</description>
+	<description>ttm_repuestos 3ras evaluacion</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -40,8 +40,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
